# rrtw-tools

./: .clang-format  .clang-format.txt  .gitmodules  CMakeLists.txt  README.md  build.ninja  compile_flags.txt
ext/include/dcc/: debug.hpp  errno.hpp  file.hpp  logger.hpp  strman.hpp
ext/include/dcc/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  xchar.h
ext/lib/: dcc-debug.lib  dcc-errno.lib  dcc-file.lib  dcc-fmt.lib  dcc-logger.lib  dcc-strman.lib
ext/lib/msvc/: dcc-debug.lib  dcc-errno.lib  dcc-file.lib  dcc-fmt.lib  dcc-logger.lib  dcc-strman.lib
misc/: README.md
script/: build-msvc.bat  gnu-debug-flags.txt  gnu-debug.sh  gnu-release-flags.txt  gnu-release.sh  msvc-release.bat
script/tool/: generate_export_units.bat  verify-banners.bat  verify-characters-check-all-factions.bat  verify-characters-check-all-refereneced.bat  verify-characters.bat  verify-units-check-all-factions.bat  verify-units-check-all-referenced.bat  verify-units-ignore-slave.bat  verify_units.bat  verify_units_check_all_faction_textures.bat  verify_units_check_all_referenced_textures.bat  verify_units_ignore_slave.bat
src/: common.cpp  common.hpp  verificator.cpp
